// @ts-ignore next-line
global.fetch = require('node-fetch')
import nock from 'nock'
import { nockAllGraphqlRequests, NockAllGraphqlRequestsControls } from '../utils/graphql.mock'
import cons from '../utils/console.mock'
import flushPromises from 'flush-promises'
import { when } from '../utils/when'

// For run tests sequentially (one by one)
// use describe blocks, each describe block runs ony after previus

describe('Repository', () => {
  beforeAll(() => {
    nock.disableNetConnect()
    cons.mockConsole()
  });

  let requestControls: NockAllGraphqlRequestsControls

  beforeEach(async () => {
    requestControls = await nockAllGraphqlRequests(nock, 'repository')
  })

  afterEach(() => {
    nock.cleanAll()
  });

  afterAll(() => {
    cons.restoreConsole()
  })


  // TODO: check requests snapshots
  
  // TODO: check order or events
  //  request -> reactive update -> response -> reactive update
  
  // TODO: check display states
  //  isLoading -> before and during request
  //  isChanged -> on change data
  //  isUpdating -> during update
  //  ...

  // TODO: check snapshots of result data

  // TODO: remove timeouts

  // TODO: check multiple layers of object
  
  // TODO: test repository without database
  
  it('should generate query for one entity and display', async () => {
    // must be inside test for mock fetch function
    const { Database } = require('@/lazyDb/database/connected/Database')
    const { Repository } = new Database()
    const DataRepository = new Repository('country')

    const reactiveUpdate = jest.fn()
    const node = DataRepository.findOne('test-id', reactiveUpdate) 

    // ask data
    expect(node.name).toBeUndefined()
    expect(node.code).toBeUndefined()
    expect(node.updatedAt).toBeUndefined()
    expect(node.createdAt).toBeUndefined()

    // Check graphql query is correct
    requestControls.checkRequestParams = query => 
      expect(query).toMatchSnapshot()

    // Wait while lazyDB requested all data and rerender
    await requestControls.waits.wait()
    // one call when requiest start
    await when(() => reactiveUpdate.mock.calls.length > 0)
    expect(reactiveUpdate.mock.calls.length).toBe(1)

    // when data will be displayed
    await when(() => reactiveUpdate.mock.calls.length === 2)
    expect(reactiveUpdate.mock.calls.length).toBe(2)

    expect(node.id).toBeDefined()
    expect(node.name).toBeDefined()
    expect(node.code).toBeDefined()
    expect(node.updatedAt).toBeDefined()
    expect(node.createdAt).toBeDefined()

    // flush events
    await flushPromises()
  })

  it('should generade query for list by first node and return', async () => {
    // must be inside test for mock fetch function
    const { Database } = require('@/lazyDb/database/connected/Database')
    const { Repository } = new Database()
    const DataRepository = new Repository('country')
  
    const reactiveUpdate = jest.fn()
    const list = DataRepository.list(reactiveUpdate)

    // ask data
    expect(list.nodes[0].name).toBeUndefined()
    expect(list.nodes[0].code).toBeUndefined()
    expect(list.nodes[0].updatedAt).toBeUndefined()

    // Check graphql query is correct
    requestControls.checkRequestParams = query => 
      expect(query).toMatchSnapshot()
    
    // Wait while lazyDB requested all data and rerender
    await requestControls.waits.wait()
    // only one call, need investigate why, 
    //  possible because debounce is too big
    await when(() => reactiveUpdate.mock.calls.length === 1)
    expect(reactiveUpdate.mock.calls.length).toBe(1)
  
    // when data will be displayed
    // await when(() => reactiveUpdate.mock.calls.length === 2)
    // expect(reactiveUpdate.mock.calls.length).toBe(2)

    expect(list.nodes.length).toBe(15)

    expect(list.nodes[0].id).toBe("gILNkgtqw")
    expect(list.nodes[0].name).toBe("Estonia")
    expect(list.nodes[0].code).toBe("DE")
    expect(list.nodes[0].updatedAt).toEqual(new Date("2020-02-27T00:25:04+03:00"))

    expect(list.nodes[6].id).toBe("vP38-NdB-S")
    expect(list.nodes[6].name).toBe("Guinea-Bissau")
    expect(list.nodes[6].code).toBe("IE")
    expect(list.nodes[6].updatedAt).toEqual(new Date("2020-03-15T00:25:04+03:00"))

    // flush events
    await flushPromises()

    // TODO: equility comparisition for lazy objects not work, need fix
    // expect(resultedList.nodes).toEqual([
    //   {"id":"gILNkgtqw", "name":"Estonia","code":"DE","updatedAt":"2020-02-27T00:25:04+03:00"},
    //   {"id":"RvBE9BWZ85","name":"Comoros","code":"CN","updatedAt":"2020-03-02T00:25:04+03:00"},
    //   {"id":"0Pj8HSsj2e","name":"Mayotte","code":"IN","updatedAt":"2020-03-07T00:25:04+03:00"},
    //   {"id":"mIBSPRsCW1","name":"Kuwait","code":"US","updatedAt":"2020-03-04T00:25:04+03:00"},
    //   {"id":"hcQnOCkpmJ","name":"Slovakia (Slovak Republic)","code":"US","updatedAt":"2020-03-07T00:25:04+03:00"},
    //   {"id":"N8RK5pKUpR","name":"Guinea","code":"FR","updatedAt":"2020-03-12T00:25:04+03:00"},      
    //   {"id":"vP38-NdB-S","name":"Guinea-Bissau","code":"IE","updatedAt":"2020-03-15T00:25:04+03:00"},      
    //   {"id":"HUZ0tFZw41","name":"Nicaragua","code":"MX","updatedAt":"2020-02-29T00:25:04+03:00"},
    //   {"id":"o_xKHVYYCb","name":"Czech Republic","code":"IE","updatedAt":"2020-03-07T00:25:04+03:00"},
    //   {"id":"GjmpsFXCnv","name":"India","code":"ES","updatedAt":"2020-02-25T00:25:04+03:00"},
    //   {"id":"HCGgb2ALkw","name":"Japan","code":"RU","updatedAt":"2020-03-06T00:25:04+03:00"},
    //   {"id":"G6uw5EaXT8","name":"Monaco","code":"IN","updatedAt":"2020-03-14T00:25:04+03:00"},
    //   {"id":"tuMpRj14b3","name":"Guadeloupe","code":"MX","updatedAt":"2020-03-09T00:25:04+03:00"},
    //   {"id":"KF5UhVBanC","name":"Netherlands Antilles","code":"MX","updatedAt":"2020-03-06T00:25:04+03:00"},
    //   {"id":"FlSxQ0a3nP","name":"Myanmar","code":"FR","updatedAt":"2020-03-09T00:25:04+03:00"}
    // ])
  })
  
})
